tests/fail/enum_fail.rs
use salak::*;

#[derive(Debug, FromEnvironment)]
pub enum FailEnum {
    Fail(u8),
}

fn main() {}
